Start sample app implementation

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -4,3 +4,9 @@
   title        = {Diplomaterv portál (2011. február 26.)},
 }
 
+@misc{Docker,
+	author       = {{Docker}},
+	howpublished = {\url{https://www.docker.com/}},
+	title        = {Docker (01/12/2021)},
+}
+
