Progress on sample app implementation

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -1,12 +1,35 @@
-@misc{DipPortal,
-  author       = {{Budapesti Műszaki és Gazdaságtudományi Egyetem Villamosmérnöki és Informatikai Kar}},
-  howpublished = {\url{http://diplomaterv.vik.bme.hu/}},
-  title        = {Diplomaterv portál (2011. február 26.)},
-}
-
 @misc{Docker,
 	author       = {{Docker}},
 	howpublished = {\url{https://www.docker.com/}},
 	title        = {Docker (01/12/2021)},
 }
 
+@misc{SpringBoot,
+	author       = {{Spring}},
+	howpublished = {\url{https://spring.io/projects/spring-boot}},
+	title        = {Spring Boot (01/12/2021)},
+}
+
+@misc{SpringDataJPA,
+	author       = {{Spring}},
+	howpublished = {\url{https://spring.io/projects/spring-data-jpa}},
+	title        = {Spring Data JPA (01/12/2021)},
+}
+
+@misc{JMS,
+	author       = {{Oracle}},
+	howpublished = {\url{https://www.oracle.com/java/technologies/java-message-service.html}},
+	title        = {Java Message Service (JMS) (01/12/2021)},
+}
+
+@misc{JMSGuide,
+	author       = {{Spring}},
+	howpublished = {\url{https://spring.io/guides/gs/messaging-jms/}},
+	title        = {Messaging with JMS (01/12/2021)},
+}
+
+@misc{ThesisRepo,
+	author       = {{martonorova}},
+	howpublished = {\url{https://github.com/martonorova/msc-onlab}},
+	title        = {Thesis repository (01/12/2021)},
+}
